Semi major update:
* Another update to README, you know how we be makin changes!
    * Much cleaner and more consistent, slightly better organized
    * More thought on the data structure, so it's fleshed out
    * New known issues section because of TNT blowing up invincible
entities is a thing.
* Added Protect Zappable entity type
* Added Protect Zone to hit detection zone(s)
    * Zaps Protect Zappable entities for added protection to perimeter
    * Tells user about enter/exit messaging
* Cleaned up scanning processes
* Added build protection process
* Added TNT to the zappable list because explosions

--- a/nfgForceField/data/nfg_forcefield/tags/entity_types/zappable.json
+++ b/nfgForceField/data/nfg_forcefield/tags/entity_types/zappable.json
@@ -5,6 +5,7 @@
         "#minecraft:impact_projectiles",
         "minecraft:evoker_fangs",
         "minecraft:firework_rocket",
+        "minecraft:tnt",
         "betteranimalsplus:barracuda",
         "betteranimalsplus:boar",
         "betteranimalsplus:bobbit_worm",
