--- a/nfgForceField/data/nfg_forcefield/tags/entity_types/protect_zappable.json
+++ b/nfgForceField/data/nfg_forcefield/tags/entity_types/protect_zappable.json
@@ -1,3 +1,7 @@
 {
-    "values": ["minecraft:firework_rocket", "minecraft:tnt"]
+    "values": [
+        "#minecraft:arrows",
+        "minecraft:firework_rocket",
+        "minecraft:tnt"
+    ]
 }
