MAJOR major changes!
* Readme
	* Major cleanup
	* Decided to rearrange priorities once more. This time focusing
on refactoring earlier to get the nest a bit cleaner
* Modified FF Data Structure to include `calcs` and `corner` members
	* Cleaned up references everywhere
	* Cleaned up namespaces that were broken, or ambiguous (ie,
	* Tooltip updates to reflect changes
id/ownerId)
* Tiny distance-check fixes for demolishing corners, it felt a bit too
tight and made it hard sometimes to actually hit
* Building Helper
	* responsible for holding data while building a forcefield!
	* Replaces storage within the corners while building
		* Still used at finalization
	* Follows player
	* NEEDS: While creating and destroying starting corner, it stays
around :S
	* Updates placement helper to target localized stand instead of
singleton data
	* Hopefully should cover almost all MP issues
* Prefaced the env to combine placing/unconfigured
* Refactored some tag names to be more explicit/functional
* Placing Helper is now a PLAYER tag functionality, rather than any
other entity (ie, an uninit'd Corner)
	* New namespace reflecting architecture change
* Creepers are now zappable in the protect zone since they can boom boom
corners as well

--- a/nfgForceField/data/nfg_forcefield/tags/entity_types/protect_zappable.json
+++ b/nfgForceField/data/nfg_forcefield/tags/entity_types/protect_zappable.json
@@ -2,6 +2,7 @@
     "values": [
         "#minecraft:arrows",
         "minecraft:firework_rocket",
-        "minecraft:tnt"
+        "minecraft:tnt",
+        "minecraft:creeper"
     ]
 }
